--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -6,10 +6,10 @@
 name: CI
 
 on:
-  pull_request:
+  push:
     branches:
     - bugfix-2.0.x
-    - dev-2.1.x
+    - artiller-genius
     paths-ignore:
     - config/**
     - data/**
@@ -36,49 +36,9 @@ jobs:
 
         # Extended AVR Environments
 
-        - FYSETC_F6_13
         - mega1280
-        - rambo
-        - sanguino1284p
-        - sanguino644p
-
-        # Extended STM32 Environments
-
-        - STM32F103RC_btt
-        - STM32F103RC_btt_USB
-        - STM32F103RE_btt
-        - STM32F103RE_btt_USB
-        - STM32F103RC_fysetc
-        - jgaurora_a5s_a1
-        - STM32F103VE_longer
-        - STM32F407VE_black
-        - BIGTREE_SKR_PRO
-        - BIGTREE_GTR_V1_0
-        - mks_robin
-        - ARMED
-        - FYSETC_S6
-        - malyan_M300
-        - mks_robin_lite
-
-        # Put lengthy tests last
-
-        - LPC1768
-        - LPC1769
-
-        # STM32 with non-STM framework. both broken for now. they should use HAL_STM32 which is working.
-
-        #- STM32F4
-        #- STM32F7
-
-        # Non-working environment tests
-
-        #- BIGTREE_BTT002
-        #- at90usb1286_cdc
-        #- at90usb1286_dfu
-        #- STM32F103CB_malyan
-        #- mks_robin_mini
-        #- mks_robin_nano
-
+        - mega2560
+        
     steps:
 
     - name: Select Python 3.7
