--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches:
     - bugfix-2.0.x
-    - artiller-genius
+    - artillery-genius
     paths-ignore:
     - config/**
     - data/**
