--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -42,11 +42,11 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: firmware
+        name: mega2560-firmware.hex
         path: .pio/build/mega2560/firmware.hex
     
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: firmware
+        name: mega1280-firmware.hex
         path: .pio/build/mega1280/firmware.hex
